// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Openapi > Optional 1`] = `
{
  "required": false,
  "schema": {
    "format": "md5",
    "type": "string",
  },
}
`;

exports[`Openapi > Required 1`] = `
{
  "required": true,
  "schema": {
    "format": "md5",
    "type": "string",
  },
}
`;

exports[`Openapi > With default value 1`] = `
{
  "required": false,
  "schema": {
    "default": "some-hash",
    "format": "md5",
    "type": "string",
  },
}
`;

exports[`Openapi > With extra infos 1`] = `
{
  "deprecated": true,
  "description": "Hello Test",
  "required": true,
  "schema": {
    "format": "sha1",
    "type": "string",
  },
}
`;
